--- a/style.css
+++ b/style.css
@@ -1,102 +1,73 @@
-*{
-    margin:0px;
-    padding:0px;
-}
-.wrapper {
-    width: 100%;
-    height: 1400%;
-    position:absolute;
-    background: linear-gradient(45deg,#F17C58, #E94584, #24AADB , #27DBB1,#FFDC18, #FF3706);
-    background-size: 2000% 100%;
-    animation: gradient 16s linear infinite;
-    animation-direction: alternate;
+body {
+    background-color: #F3EBF6;
+    font-family: 'Ubuntu', sans-serif;
 }
 
-.navbar-brand{
-    font-size:20px;
-    font-style: italic;
+.main {
+    background-color: #FFFFFF;
+    width: 400px;
+    height: 400px;
+    margin: 7em auto;
+    border-radius: 1.5em;
+    box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
+}
+
+.sign {
+    padding-top: 40px;
+    color: #8C55AA;
+    font-family: 'Ubuntu', sans-serif;
     font-weight: bold;
-    color:black;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; 
-}
-li{
-    font-size:22px;
-    font-style: italic;
-    font-weight: bold;
-    color:black;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;  
-}
-h1
-{
-    font-size:25px;
-    font-style: italic;
-    font-weight: bold;
-    color:black;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; 
+    font-size: 23px;
 }
 
-.container
-{
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    background-color: red;
-    background: linear-gradient(to bottom, rgb(6, 108, 224),  rgb(14, 48, 122));
-    width: 500px;
-    height: 300px;
-    margin: 10% auto;;
-    border-radius: 5px;
+.un {
+width: 76%;
+color: rgb(38, 50, 56);
+font-weight: 700;
+font-size: 14px;
+letter-spacing: 1px;
+background: rgba(136, 126, 126, 0.04);
+padding: 10px 20px;
+border: none;
+border-radius: 20px;
+outline: none;
+box-sizing: border-box;
+border: 2px solid rgba(0, 0, 0, 0.02);
+margin-bottom: 50px;
+margin-left: 46px;
+text-align: center;
+margin-bottom: 27px;
+font-family: 'Ubuntu', sans-serif;
 }
 
-.content-holder
-{
-    text-align: center;
-    color: white;
-    font-size: 14px;
-    font-weight: lighter;
-    letter-spacing: 2px;
-    margin-top: 15%;
-    padding: 50px;
-}
-.content-holder h2
-{
-    font-size: 34px;
-    margin: 20px auto;
+form.form1 {
+    padding-top: 40px;
 }
 
-.content-holder p
-{
-    margin: 30px auto;
-}
-.box-2{
-    background-color: white;
-    width: 300px;
-    height: 300px;
-    /* margin: 4px; */
-}
-
-.login-form-container
-{
-    text-align: center;
-    margin-top: 10%;
-
-}
-
-.login-form-container h1
-{
-    color: black;
-    font-size: 24px;
-    padding: 20px;
+.pass {
+        width: 76%;
+color: rgb(38, 50, 56);
+font-weight: 700;
+font-size: 14px;
+letter-spacing: 1px;
+background: rgba(136, 126, 126, 0.04);
+padding: 10px 20px;
+border: none;
+border-radius: 20px;
+outline: none;
+box-sizing: border-box;
+border: 2px solid rgba(0, 0, 0, 0.02);
+margin-bottom: 50px;
+margin-left: 46px;
+text-align: center;
+margin-bottom: 27px;
+font-family: 'Ubuntu', sans-serif;
 }
 
-.input-field
-{
-    box-sizing: border-box;
-    font-size: 14px;
-    padding: 10px;
-    border-radius: 7px;
-    border: 1px solid rgb(168, 168, 168);
-    width: 250px;
-    outline: none;
+
+.un:focus, .pass:focus {
+    border: 2px solid rgba(0, 0, 0, 0.18) !important;
+    
 }
 
 .login-button{
@@ -108,59 +79,23 @@ h1
     border: none;
     width: 250px;
     outline: none;
-    background-color: rgb(207, 80, 181);
-}
-#container{
-    position: absolute;
-    top:25em;
-    width: 100%;
-    height: 250px;
+    background-color: rgb(219, 92, 194);
     
-}
-#list{
-    position: absolute;
-    top:8em;
-    left:17em;
-    width: 65%;
-    font-family:Georgia, 'Times New Roman', Times, serif;
-    border-collapse: collapse;
-    border: 1.5px solid #ddd;
-    text-align: center;
-    box-shadow: 0px 2px 2px 0px black;
-    border-radius: 15px;
-}
-#list thead{
-    font-size: large;
-    text-align: justify;
-    padding: 12px;
-
-    color:antiquewhite
-}
-#list th{
-    border: 1px solid #ddd;
-    padding: 12px;
-    color: antiquewhite;
-    text-align: center;
-}
-#list td{
-    border: 1px solid #ddd;
-    padding: 12px;
-    color: antiquewhite;
-}
-#list tr:hover{
-background-color:slategray;
+    font-family: 'Ubuntu', sans-serif;
+    margin-left: 18%;
+    font-size: 15px;
 }
 
-#things{
-    background-color:palegoldenrod; 
-    color:black;
-    height: auto;
-    font-size: large;
-    padding: 9px;
-    font-weight: bold;
-    border-radius: 10px;
-    opacity: .8;
+
+.forgot {
+    text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);
+    color: #E1BEE7;
+    padding-top: 15px;
 }
-#things:hover{
-    opacity:1;
-}
+
+
+
+@media (max-width: 600px) {
+    .main {
+        border-radius: 0px;
+    }}
